...
                scope.launch {
                    focusManager.clearFocus().also { showBottomSheet = true }
                    viewModel.onLoadCurrencies(uiState.ethAmount)
                }
            },
            onRotate = viewModel::onSwitchInputModel,
            snackbar = {
                val errorState by viewModel.errorState
                if (errorState.isNotBlank()) {
                    Snackbar(
                        modifier = Modifier.testTag("snackbar"),
                        action = {
                            Button(onClick = { viewModel.clearError() }) {
...
                        modifier = Modifier.width(4.dp)
                    )
                    var inputAmountState by rememberSaveable { mutableStateOf("") }
                    BasicTextField(
                        modifier = Modifier
                            .weight(1f)
                            .testTag("user-input"),
                        value = inputAmountState,
                        singleLine = true,
                        keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Number),
                        textStyle = MaterialTheme.typography.headlineSmall.copy(fontSize = 22.sp),
                        onValueChange = {
                            inputAmountState = it
...
                    )
                }
                if (inputMode.isFiatToEth()) {
                    Text(
                        modifier = Modifier
                            .align(Alignment.BottomStart)
                            .testTag("exp-amount-text"),
                        text = stringResource(
                            R.string.home_exchange_conversion_eth_text,
                            ethAmount
                        ),
                        color = Color.Gray.copy(alpha = 0.6f),
                        style = MaterialTheme.typography.headlineSmall.copy(fontSize = 14.sp),
...
                    style = MaterialTheme.typography.labelMedium,
                )
                if (inputMode.isFiatToEth()) {
                    InputChip(
                        modifier = Modifier
                            .align(Alignment.CenterStart)
                            .testTag("currency-chip"),
                        selected = false,
                        onClick = onOpenCurrencySelector,
                        border = null,
                        label = { Text(text = currency.name.uppercase()) },
                        avatar = {
                            Image(
...
                val rotation = remember { Animatable(0f) }
                val coroutineScope = rememberCoroutineScope()
                OutlinedIconButton(
                    modifier = Modifier
                        .padding(0.dp)
                        .background(Color.White)
                        .testTag("input-mode"),
                    border = BorderStroke(1.dp, Color.LightGray),
                    onClick = {
                        val (target, mode) = if (rotation.value == 0f) {
                            Pair(180f, InputMode.ETH_ONLY)
                        } else {
                            Pair(0f, InputMode.FIAT_TO_ETH)
...
